protocols/tests/adders/adder_d1/both_threads_fail.out
error: The two expressions did not evaluate to the same value
   ┌─ adders/adder_d1/add_d1.prot:26:13
   │
26 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: 5, RHS Value: 3

error: The two expressions did not evaluate to the same value
   ┌─ adders/adder_d1/add_d1.prot:26:13
   │
26 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: 10, RHS Value: 9

Trace 0 failed: Assertion(EqualityFailed { expr1_id: expr5, expr2_id: expr6, value1: ValueOwned(00000000000000000000000000000101), value2: ValueOwned(00000000000000000000000000000011) })
Trace 0 failed: Assertion(EqualityFailed { expr1_id: expr5, expr2_id: expr6, value1: ValueOwned(00000000000000000000000000001010), value2: ValueOwned(00000000000000000000000000001001) })
Trace 0 execution failed.
